# tinyhack

./: CMakeLists.txt  README.md
cmake/: TinyTools.cmake
data/: title.xp
emscripten/: .gitignore  generate_debug.bat  generate_release.bat  index.html
engine/: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
engine/cmake/: TinyTools.cmake
engine/src/: Direction.cpp  Direction.h  Image.cpp  Image.h  KeyboardState.h  MouseState.h  Random.h  RandomUtil.h  RangeUtil.h  Util.h
engine/src/algorithm/: EasingFunc.h  MazeGenerator.cpp  MazeGenerator.h
engine/src/diag/: Assert.cpp  Assert.h  Debugger.h  Log.cpp  Log.h  LogArg.cpp  LogArg.h
engine/src/ds/: Array2.h  ArrayView.h  ByteArrayView.h  Color.cpp  Color.h  Pool.h  Range.h  Rect.h  Ref.h  Size2.h  StringView.h  TimeSpan.h
engine/src/ecs/: Aspect.h  Component.cpp  Component.h  ComponentPool.cpp  ComponentPool.h  ECS.cpp  ECS.h  EntityID.h
engine/src/gfx/: GfxRef.h  Gizmo.cpp  Gizmo.h  MeshSource.h  RenderConstants.h  Renderer.cpp  Renderer.h  ShaderSource.h  VertexAttributeConfig.h
engine/src/gfx/gl/: DebugOpenGL.cpp  DebugOpenGL.h  OpenGLConfig.h  PrimitivesOpenGL.h  UtilOpenGL.cpp  UtilOpenGL.h
engine/src/io/: BinaryStream.h
engine/src/math/: Mat22.h  Mat33.h  Mat44.h  Math.h  Math_matrix.cpp  Math_matrix.h  Math_misc.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
engine/src/os/: File.h  FileSystem.cpp  FileSystem.h  FileSystem_MacOS.cpp  FileSystem_Win32.cpp  GLFW.h  Path.cpp  Path.h  Window.cpp  Window.h
engine/src/text/: Box.cpp  Box.h  Console.cpp  Console.h  ConsoleRenderer.cpp  ConsoleRenderer.h  ConsoleRenderer_fsh_gl.h  ConsoleRenderer_fsh_gles.h  ConsoleRenderer_vsh_gl.h  ConsoleRenderer_vsh_gles.h  FontTexture.h  XpImage.cpp  XpImage.h
src/: Application.cpp  Application.h  BaseScene.cpp  BaseScene.h  ConsoleTools.cpp  ConsoleTools.h  DeathScene.cpp  DeathScene.h  GameScene.cpp  GameScene.h  HelpScene.cpp  HelpScene.h  Palette.cpp  Palette.h  SceneStack.cpp  SceneStack.h  StringTools.cpp  StringTools.h  TitleScene.cpp  TitleScene.h  UpdateArgs.h  main_emscripten.cpp  main_pc.cpp
src/algorithm/: PathFinder.cpp  PathFinder.h
src/animation/: Animator.cpp  Animator.h  FlashPoint.h  FocusAnimation.h  ProgressBarExplosion.h  ScanAnimation.h
src/entity/: ComponentData.h  Systems.cpp  Systems.h
src/fov/: Fov.cpp  Fov.h  ViewDirection.h  VisibilityMap.cpp  VisibilityMap.h
src/game/: MessageLog.cpp  MessageLog.h  World.cpp  World.h
src/hud/: ProgressBar.cpp  ProgressBar.h
src/input/: Input.cpp  Input.h  InputAction.h  InputAction_Data.h
src/lang/: Lang.cpp  Lang.h  LangData.h
src/level/: Network.cpp  Network.h  NetworkGenerator.cpp  NetworkGenerator.h  NetworkTools.cpp  NetworkTools.h
src/resources/: ResourceLoader.cpp  ResourceLoader.h
